<resources>
    <string name="app_name">UYMobileApp</string>
    <string name="hello_world">Hello World</string>
    <string name="exercise_1">Exercise 1</string>
    <string name="activity_1">Activity 1</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_3">Activity 3</string>
    <string name="send_sms">Send SMS</string>
    <string name="google">OPEN GOOGLE MAPS</string>
    <string name="logo">Logo</string>
</resources>